# MLE_FIAP_FASE_3

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  pyproject.toml
api/: pyproject.toml
api/src/: main.py  start.py
api/src/api/: endpoints.py  main.py
api/src/api/model/: __init__.py  features_info.pkl  model.py
api/src/core/: config.py
api/src/model/: model.py
api/src/services/: download_service.py  sync_service.py
api/src/streamlit_app/: streamlit_app.py
api/src/utils/: file_utils.py
estudo/: main.ipynb  usando_modelo.ipynb
front/: Dockerfile  main.py  streamlit_app.py
model/: main.py  model.py
