[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucasas001",email = "lucas.as1@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "geocoder(>=1.38.1)",
    "geopy(>=2.4.1)",
    "aiohttp (>=3.11.16)"
]

[tool.poetry]
packages = [{ include = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.start:main"