[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Lucasas001 <lucas.as1@hotmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
# poetry-style: não use [project]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
geocoder = "^1.38.1"
geopy = "^2.4.1"
aiohttp = "^3.11.16"
pandas = "^2.2.3"
xgboost = "^3.0.0"
scikit-learn = "^1.6.1"
streamlit = "^1.44.1"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.start:main"